@startuml Model

interface IContainer
interface IContainee
interface IFolder

IContainer -right-> "*" IContainee : Content
StorageLocation -up-|> IContainer 
IFolder -up-|> IContainer
IFolder -up-|> IContainee
Document -up-|> IContainee
Document --> Group : Business-owner-group
Folder -up-|> IFolder

User -right-> "*" StorageLocation : Viewable
User --> "*" Group

@enduml
